--- a/design-toolkit/components/src/components/search-field/search-field.docs.mdx
+++ b/design-toolkit/components/src/components/search-field/search-field.docs.mdx
@@ -5,3 +5,78 @@ import * as SearchFieldStories from './search-field.stories';
 <Meta of={SearchFieldStories} />
 
 # SearchField
+The SearchField component provides a customizable search input with integrated search icon, loading state, and clear functionality. It's built on React Aria Components and provides excellent accessibility out of the box. Search fields are commonly used in navigation bars, data tables, and anywhere users need to filter or search through content.
+
+## Example usage
+```tsx
+// Basic search field
+<SearchField placeholder="Search..." />
+
+// With event handlers
+<SearchField
+  placeholder="Type to search"
+  onSubmit={(value) => console.log('Search:', value)}
+  onChange={(value) => setQuery(value)}
+/>
+
+// Using context provider for default props
+<SearchField.Provider variant="filled">
+  <SearchField placeholder="Search 1" />
+  <SearchField placeholder="Search 2" />
+</SearchField.Provider>
+```
+
+## Variants
+
+* **Outlined** - renders with a border outline (default)
+* **Filled** - renders with a filled background and darker outline
+
+The variant can be controlled via the `variant` prop or set globally using the `SearchField.Provider` component.
+
+<Canvas of={SearchFieldStories.Default} />
+
+## Props
+
+* **`placeholder`** - Placeholder text displayed when the input is empty
+* **`variant`** - Visual style: `'outlined'` (default) or `'filled'`
+* **`isLoading`** - Displays a loading spinner instead of the clear button
+* **`isDisabled`** - Disables the search field
+* **`isRequired`** - Marks the search field as required
+* **`value`** - The current search value
+* **`onChange`** - Callback when the input value changes
+* **`onSubmit`** - Callback when the search is submitted (Enter key or search button)
+* **`onClear`** - Callback when the clear button is clicked
+* **`inputProps`** - Additional props passed to the underlying input element
+* **`classNames`** - Custom class names for styling:
+  * `field` - Applied to the search field container
+  * `input` - Applied to the input element
+  * `search` - Applied to the search icon
+  * `loading` - Applied to the loading spinner
+  * `clear` - Applied to the clear button
+
+## Subcomponents
+
+### SearchField.Provider
+Context provider component that allows setting default props for multiple SearchField components. Useful for maintaining consistent styling across a group of search fields.
+
+### SearchField
+The main search field component that renders the input with integrated icons and functionality.
+
+## Implementation Notes
+The `SearchField` component wraps the `SearchField` component from `react-aria-components`. [Docs](https://react-spectrum.adobe.com/react-spectrum/SearchField.html)
+
+The underlying elements are:
+- `div` for the search field container
+- `input[type="search"]` for the search input
+- `button` for the clear functionality
+- `span` elements for the search and loading icons
+
+The component automatically handles accessibility features including:
+- ARIA attributes for screen readers
+- Keyboard navigation (Enter to submit, Escape to clear)
+- Focus management
+- Form integration
+- Loading state announcements
+- Clear button visibility based on input state
+
+The component integrates with the Icon system and automatically provides the appropriate size context for all icons.
